metadata/force-app/main/default/objects/Integration_request__c/Integration_request__c.object-meta.xml
<CustomObject>
    <label>Integration request</label>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>Integration request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>