metadata/force-app/main/default/objects/Integration_request__c/fields/Customer_priority__c.field-meta.xml
<CustomField>
    <fullName>Customer_priority__c</fullName>
    <label>Customer priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must Have</fullName>
            </value>
            <value>
                <fullName>Should Have</fullName>
            </value>
            <value>
                <fullName>Nice to Have</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>