metadata/force-app/main/default/objects/Integration_request__c/fields/Date_of_completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_completion__c</fullName>
    <formula>Integration__r.Date_of_completion__c</formula>
    <label>Date of completion</label>
    <type>Date</type>
</CustomField>