metadata/force-app/main/default/objects/Integration_request__c/fields/Go_live_date__c.field-meta.xml
<CustomField>
    <fullName>Go_live_date__c</fullName>
    <formula>Integration__r.Go_live_date__c</formula>
    <label>Go live date</label>
    <type>Date</type>
</CustomField>