metadata/force-app/main/default/objects/Integration_request__c/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <referenceTo>Integration__c</referenceTo>
    <relationshipLabel>Integration requests</relationshipLabel>
    <relationshipName>Integration_details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>