metadata/force-app/main/default/objects/Integration_request__c/fields/Integration_in_use__c.field-meta.xml
<CustomField>
    <fullName>Integration_in_use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration in use</label>
    <type>Checkbox</type>
</CustomField>