metadata/force-app/main/default/objects/Integration_request__c/fields/Integration_request_note__c.field-meta.xml
<CustomField>
    <fullName>Integration_request_note__c</fullName>
    <inlineHelpText>Please describe what the client would like to achieve with the integration.  More detailed the information could help prioritise the request.</inlineHelpText>
    <label>Usecase</label>
    <type>TextArea</type>
</CustomField>