metadata/force-app/main/default/objects/Integration_request__c/fields/Integration_status__c.field-meta.xml
<CustomField>
    <fullName>Integration_status__c</fullName>
    <formula>TEXT(Integration__r.Status__c)</formula>
    <label>Integration status</label>
    <type>Text</type>
</CustomField>