metadata/force-app/main/default/objects/Integration_request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Integration requests</relationshipLabel>
    <relationshipName>Integration_details</relationshipName>
    <type>Lookup</type>
</CustomField>