metadata/force-app/main/default/objects/Integration_request__c/fields/Opportunity_MRR__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_MRR__c</fullName>
    <formula>Opportunity__r.MRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>