metadata/force-app/main/default/objects/Integration_request__c/fields/Solution_Owner__c.field-meta.xml
<CustomField>
    <fullName>Solution_Owner__c</fullName>
    <description>Returns Solution Owner from the related opportunity.</description>
    <formula>Opportunity__r.Solution_Owner__r.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Solution_Owner__r.LastName</formula>
    <label>Solution Owner</label>
    <type>Text</type>
</CustomField>