metadata/force-app/main/default/objects/Integration_request__c/fields/Type_of_request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_request__c</fullName>
    <label>Type of request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Integration</fullName>
            </value>
            <value>
                <fullName>Improvement Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>