metadata/force-app/main/default/objects/Integration_request__c/validationRules/Account_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Account__c)</errorConditionFormula>
    <errorMessage>Account is required to save an integration request</errorMessage>
</ValidationRule>